myapp/app/deployments/k8s/D/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-clusterip
  namespace: dev
spec:
  selector:
    app: app
  ports:
  - protocol: "TCP"
    port: 8000
    targetPort: 8000
  type: ClusterIP
